cambios agregrados en el html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <p>
         Hola <br>
-        Me llamo <strong>Carlos Daniel</strong>
+        Me llamo <strong>Carlos Daniel</strong> <br>
+        y este es el curso de preWork de Platzi
     </p>
 </body>
 </html>
